Commit-3